--- a/src/sass/components/common/header.scss
+++ b/src/sass/components/common/header.scss
@@ -1,5 +1,4 @@
 .zk-ui-header {
-    padding: 0;
     border-radius: 0;
     box-shadow: 2px 2px 2px #d9d9d9;
     width: 100%;
